# IAM-SENTINEL-ese-

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  README.md  SECURITY.md  alembic.ini  docker-compose.yml  docker-entrypoint.sh  pyproject.toml
.github/workflows/: ci.yml
app/: __init__.py  cli.py  config.py  db.py  jobs.py  scheduler.py
app/analysis/: __init__.py  engine.py  graph.py  least_privilege.py  registry.py  risk.py
app/analysis/checks/: __init__.py  _util.py  credential.py  identity.py  inventory.py  log_checks.py  policy_checks.py  privilege.py
app/api/: __init__.py  accounts.py  auth.py  checks.py  compliance.py  errors.py  findings.py  me.py  pagination.py  principals.py  runs.py  schemas.py
app/compliance/: __init__.py  mappings.py
app/domain/: __init__.py  cron.py  enums.py  fingerprint.py  logparse.py  policy.py  records.py  timeutil.py
app/ingestion/: __init__.py  base.py  file_adapter.py  normalize.py
app/ingestion/moto/: __init__.py  adapter.py  cloudtrail_events.jsonl  seed.py
app/integrations/: __init__.py  base.py  jira.py  net_safety.py  registry.py  slack.py  webhook.py
app/models/: __init__.py  base.py  tables.py
app/services/: __init__.py  account_service.py  auth_service.py  bulk_service.py  checks_catalog.py  collaboration.py  compliance_view.py  connect_service.py  dashboard.py  diff_service.py  exception_service.py  export_service.py  finding_detail.py  finding_query.py  graph_view.py  integration_service.py  rbac.py  run_query.py  scan_service.py  schedule_service.py  ticket_service.py  user_service.py  workflow_service.py
app/web/: __init__.py  auth_views.py  authz.py  settings_views.py  views.py
app/web/static/: site.webmanifest
app/web/static/css/: app.css
app/web/static/js/: app.js  graph.js
app/web/templates/: accounts.html  base.html  checks_catalog.html  compliance.html  dashboard.html  empty_state.html  findings.html  graph_overview.html  login.html  principal_graph.html  profile.html  run_diff.html  runs.html  settings.html  settings_integrations.html  settings_users.html
app/web/templates/partials/: _macros.html  diff_card.html  finding_drawer.html  findings_table.html  palette_results.html  run_row.html  toast.html
docs/: ARCHITECTURE_SPEC.md
migrations/: env.py
migrations/versions/: 30d8a25ac98c_initial_schema.py  5ea4da80d1b3_ticket_integrations.py
samples/: policies.json  users.csv
tests/: conftest.py  test_api_auth.py  test_api_docs.py  test_api_endpoints.py  test_api_write_endpoints.py  test_auth_service.py  test_auth_web.py  test_authz.py  test_bulk_service.py  test_checks.py  test_checks_catalog.py  test_collaboration.py  test_compliance_view.py  test_config.py  test_connect_service.py  test_dashboard.py  test_diff_service.py  test_exception_service.py  test_finding_query.py  test_fingerprint.py  test_graph.py  test_graph_view.py  test_integration_adapters.py  test_integration_service.py  test_jobs.py  test_least_privilege.py  test_logparse.py  test_moto_ingestion.py  test_net_safety.py  test_policy.py  test_rbac.py  test_risk.py  test_scan_service.py  test_schedule_service.py  test_scheduler.py  test_ticket_service.py  test_user_service.py  test_workflow_service.py
tests/e2e/: README.md  conftest.py  seed.py  server.py  test_auth_and_rbac.py  test_copy_to_clipboard.py  test_diff_view.py  test_findings_workflow.py  test_graph_view.py  test_guided_tour.py
