[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "iam-sentinel"
version = "0.1.0"
description = "Cloud IAM security posture & entitlement analysis platform (CIEM/CSPM-lite)"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Mustafa" }]
keywords = ["iam", "aws", "security", "cspm", "ciem", "least-privilege"]

dependencies = [
    "SQLAlchemy>=2.0",
    "alembic>=1.13",
    "Flask>=3.0",
    "click>=8.1",
    "python-dateutil>=2.9",
]

[project.optional-dependencies]
# Later phases layer these in; kept declared so the roadmap is legible.
cloud = ["boto3>=1.34", "moto>=5.0"]
jobs = ["rq>=1.16", "redis>=5.0", "APScheduler>=3.10", "fakeredis>=2.23"]
api = ["flask-smorest>=0.44", "marshmallow>=3.21", "Flask-Login>=0.6", "Flask-WTF>=1.2", "argon2-cffi>=23.1", "PyJWT>=2.8", "email-validator>=2.0"]
graph = ["networkx>=3.3"]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "hypothesis>=6.100",
    "ruff>=0.6",
    "mypy>=1.11",
    "types-python-dateutil",
    "pre-commit>=3.7",
    # The simulated-AWS ingestion path (Phase 2) is a first-class feature, so the
    # dev/CI environment installs the cloud extra to actually exercise its tests
    # (they skip gracefully if boto3/moto are absent).
    "boto3>=1.34",
    "moto>=5.0",
    # Real recurring-scan + exception-expiry scheduling (Phase 2 Slice 5) uses
    # APScheduler for real, unlike the RQ/Redis half of the `jobs` extra above,
    # which stays documented-not-built per the in-process execution decision
    # (see app/scheduler.py). Declared here (not just in `jobs`) so dev/CI
    # actually exercises it; tests skip gracefully if it's absent.
    "APScheduler>=3.10",
    # Permission graph + blast-radius model (Phase 3 Slice 1, §6.2). Declared
    # here (not just in `graph`) for the same "dev/CI actually exercises this"
    # reasoning as boto3/moto and APScheduler above.
    "networkx>=3.3",
    # Auth (Phase 4 Slice 1, §10.1): session login + password hashing + the
    # login form's CSRF token. Same "dev/CI actually exercises this" reasoning
    # as the rest of this list — declared here, not just in `api`.
    "Flask-Login>=0.6",
    "Flask-WTF>=1.2",
    "argon2-cffi>=23.1",
    "email-validator>=2.0",
]

[project.scripts]
iam-sentinel = "app.cli:cli"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["app", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "C4", "SIM", "PTH"]
ignore = ["E501"]  # line length handled by formatter

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["B011"]
"migrations/*" = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.11"
warn_unused_ignores = true
warn_redundant_casts = true
no_implicit_optional = true
check_untyped_defs = true
ignore_missing_imports = true
exclude = ["migrations/", "tests/", "\\.venv/"]

# Strict on the core analysis logic — the "senior" signal.
[[tool.mypy.overrides]]
module = ["app.analysis.*", "app.domain.*"]
disallow_untyped_defs = true
disallow_incomplete_defs = true

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-q --strict-markers"
testpaths = ["tests"]
markers = [
    "integration: slower tests that touch the DB / adapters (deselect with -m 'not integration')",
]

[tool.coverage.run]
source = ["app"]
omit = ["app/cli.py", "app/web/*", "migrations/*"]

[tool.coverage.report]
show_missing = true
