[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "iam-sentinel"
version = "0.5.0"
description = "Cloud IAM security posture & entitlement analysis platform (CIEM/CSPM-lite)"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Mustafa" }]
keywords = ["iam", "aws", "security", "cspm", "ciem", "least-privilege"]

dependencies = [
    "SQLAlchemy>=2.0",
    "alembic>=1.13",
    "Flask>=3.0",
    "click>=8.1",
    "python-dateutil>=2.9",
    # Everything below is unconditionally imported by app.web.create_app()
    # (the web app — this project's actual product surface since Phase 1,
    # not an optional add-on) and by app.scheduler, which create_app() also
    # imports at module scope. Previously scattered across the `api`/`jobs`
    # extras plus a parallel copy in `dev` (kept "for CI to actually exercise
    # it"); a bare `pip install .` with no extras was broken as a result —
    # create_app() would ImportError on the first of these before ever
    # reaching a route. Moved to core so the base install actually works.
    "Flask-Login>=0.6",
    "Flask-WTF>=1.2",
    "argon2-cffi>=23.1",
    "email-validator>=2.0",
    "APScheduler>=3.10",
    "flask-smorest>=0.44",
    "marshmallow>=3.21",
    "PyJWT>=2.8",
]

[project.urls]
Homepage = "https://github.com/MoosiesRepositoryStory/IAM-SENTINEL-ese-"
Repository = "https://github.com/MoosiesRepositoryStory/IAM-SENTINEL-ese-"
Issues = "https://github.com/MoosiesRepositoryStory/IAM-SENTINEL-ese-/issues"
Changelog = "https://github.com/MoosiesRepositoryStory/IAM-SENTINEL-ese-/blob/master/CHANGELOG.md"

[project.optional-dependencies]
# Genuinely optional: both are import-guarded in code (find_spec() checks —
# see app/ingestion/moto/adapter.py, app/analysis/graph.py) and degrade
# gracefully when absent, unlike everything moved to core dependencies above.
cloud = ["boto3>=1.34", "moto>=5.0"]
graph = ["networkx>=3.3"]
# Documented, not built (§3.3.4 / a Phase 2 planning decision — see
# docs/ARCHITECTURE_SPEC.md's addendum): the architecture doc's RQ/Redis
# worker topology was never implemented; app/jobs.py uses an in-process
# ThreadingJobQueue instead, and app/scheduler.py an in-process APScheduler
# (a core dependency now, see above — nothing here duplicates it). Nothing
# in app/ imports rq/redis/fakeredis; kept declared so the documented seam
# is easy to pick up later, not because anything currently needs it.
jobs = ["rq>=1.16", "redis>=5.0", "fakeredis>=2.23"]
# Committed Playwright E2E suite (tests/e2e/, see its README) — a separate
# extra rather than folded into `dev` because it needs a browser binary
# (`playwright install chromium`) that a plain `pip install -e ".[dev]"`
# doesn't pull in; the CI e2e job installs this on top of `dev` rather than
# instead of it, since seeding + running the suite still needs boto3/moto.
e2e = ["pytest-playwright>=0.5"]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "hypothesis>=6.100",
    "ruff>=0.6",
    "mypy>=1.11",
    "types-python-dateutil",
    "pre-commit>=3.7",
    # The simulated-AWS ingestion path (Phase 2) is a first-class feature, so the
    # dev/CI environment installs the cloud extra to actually exercise its tests
    # (they skip gracefully if boto3/moto are absent).
    "boto3>=1.34",
    "moto>=5.0",
    # Permission graph + blast-radius model (Phase 3 Slice 1, §6.2). Declared
    # here (not just in `graph`) for the same "dev/CI actually exercises this"
    # reasoning as boto3/moto above.
    "networkx>=3.3",
]

[project.scripts]
iam-sentinel = "app.cli:cli"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["app", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "C4", "SIM", "PTH"]
ignore = ["E501"]  # line length handled by formatter

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["B011"]
"migrations/*" = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.11"
warn_unused_ignores = true
warn_redundant_casts = true
no_implicit_optional = true
check_untyped_defs = true
ignore_missing_imports = true
exclude = ["migrations/", "tests/", "\\.venv/"]

# Strict on the core analysis logic — the "senior" signal.
[[tool.mypy.overrides]]
module = ["app.analysis.*", "app.domain.*"]
disallow_untyped_defs = true
disallow_incomplete_defs = true

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-q --strict-markers"
testpaths = ["tests"]
# tests/e2e is a separate, browser-driven suite (its own README) that needs a
# live server + seeded DB and the `e2e` extra (pytest-playwright + a browser
# binary) — neither is present in the regular unit-test job, so it must never
# be auto-collected by a bare `pytest -q` here. norecursedirs only prunes
# automatic recursion, not an explicitly-given path, so the CI e2e job's
# `pytest tests/e2e ...` still collects it normally.
norecursedirs = [".*", "build", "dist", "*.egg", "node_modules", "e2e"]
markers = [
    "integration: slower tests that touch the DB / adapters (deselect with -m 'not integration')",
    "e2e: browser-driven end-to-end tests against a live server (see tests/e2e/README.md)",
]
filterwarnings = [
    # The dev/test SECRET_KEY (config.py's "dev-insecure-change-me" default)
    # is deliberately short — that's the whole point of its name. PyJWT
    # correctly warns real deployments to use a longer key; a real deployment
    # sets SECRET_KEY via env var, at which point this warning stops firing
    # on its own. Silenced only in tests so it doesn't drown out real signal.
    "ignore::jwt.warnings.InsecureKeyLengthWarning",
]

[tool.coverage.run]
source = ["app"]
omit = ["migrations/*"]

[tool.coverage.report]
show_missing = true
